# myLLmet

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: faithfulness.ipynb
src/myllmet/: __init__.py  schemas.py
src/myllmet/io_aws/: __init__.py  _bedrock.py  _bedrock_chat.py  exceptions.py
src/myllmet/metrics/: __init__.py  _faithfullness.py  _faithfulness.py  interface.py
src/myllmet/metrics/components/: __init__.py  claim_extractor.py  faithfulness_judge.py
src/myllmet/trackers/: __init__.py  _list.py  _noop.py  base.py
tests/: conftest.py  test_io_aws_bedrock.py  test_metrics_faithfulness.py  test_trackers_list.py  test_trackers_noop.py
tests/io_aws/: test_bedrock_chat.py
tests/metrics/: test_faithfulness.py
tests/metrics/components/: test_claim_extractor.py  test_faithfulness_judge.py
