[project]
name = "myllmet"
version = "0.1.0"
description = "A personal LLM evaluation project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3<2.0,>=1.39.0",
    "jsonschema>=4.0.0,<=5.0"
]

[dependency-groups]
dev = [
    "pytest<9.0,>=8.0",
    "mypy<2.0,>=1.0",
    "boto3-stubs[bedrock]<2.0,>=1.39.0",
    "types-jsonschema>=4.0.0",
]

[project.optional-dependencies]
pandas = [
    "pandas<3.0,>=2.0"
]

[tool.ruff]
exclude = [".venv"]
line-length = 120
indent-width = 4

lint.select = [
    "E",
    "W",
    "F",
    "Q",
    "I"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
